# oaDSS

./: CMakeLists.txt  LICENSE  README.md
ChartCtrl/: README.txt
DeepSkyStacker/: About.cpp  CMakeLists.txt  CheckAbove.cpp  DeepSkyStacker.cpp  ExplorerBar.cpp  ProcessingDlg.cpp  ProcessingDlg.h  RawDDPSettings.cpp  RecommendedSettings.cpp  RegisterSettings.cpp  StackRecap.cpp  StackingDlg.cpp  StackingDlg.h  StarMaskDlg.cpp  editstars.cpp  picturelist.cpp  picturelist.h  toolbar.h
DeepSkyStackerCL/: CMakeLists.txt
DeepSkyStackerKernel/: BitmapExt.cpp  BitmapInfo.cpp  CMakeLists.txt  ChannelAlign.cpp  DeepStack.h  FITSUtil.cpp  FrameList.cpp  PixelTransform.h  QEventLogger.cpp  RAWUtils.cpp  RegisterCore.cpp  RegisterEngine.cpp  Settings.cpp  StackedBitmap.cpp  StackingEngine.cpp  StackingTasks.cpp  Workspace.cpp
DeepSkyStackerLive/: CMakeLists.txt
DeepSkyStackerTest/: CMakeLists.txt
Help/: CMakeLists.txt  dsshelp-de.qhcp  dsshelp-de.qhp  dsshelp-en.qhc  dsshelp-en.qhcp  dsshelp-en.qhp  dsshelp-es.qhcp  dsshelp-es.qhp  dsshelp-fr.qhcp  dsshelp-fr.qhp  dsshelp-nl.qhcp  dsshelp-nl.qhp  dsshelp-pt.qhcp  dsshelp-pt.qhp
Tools/: imageview.cpp
ZClass/: CMakeLists.txt
ZClass/source/: ZTrace.cpp
core/: AHDDemosaicing.cpp  BackgroundCalibration.cpp  Bayer.cpp  BezierAdjust.h  BilinearParameters.cpp  BitMapFiller.cpp  BitmapBase.cpp  BitmapExt.cpp  BitmapExt.h  BitmapInfo.cpp  CMakeLists.txt  ChannelAlign.cpp  ColorBitmap.cpp  ColorHelpers.cpp  ColorMultiBitmap.cpp  ConcurrentSet.h  CosmeticEngine.cpp  DSSProgress.cpp  DarkFrame.cpp  DeBloom.cpp  DeepStack.cpp  DeepStack.h  EntropyInfo.cpp  ExceptionHandling.cpp  ExceptionHandling.h  ExtraInfo.h  FITSUtil.cpp  File.cpp  File.h  Filters.cpp  FlatFrame.cpp  FlatFrame.h  FrameInfo.cpp  FrameList.cpp  GrayBitmap.cpp  GrayBitmap.h  GreyMultiBitmap.cpp  Histogram.h  ImageListModel.cpp  ImageListModel.h  (+42 more)
dss/: About.cpp  About.h  AlignmentParameters.cpp  AskRegistering.cpp  BackgroundOptions.cpp  BaseDialog.cpp  BatchStacking.cpp  BatchStacking.h  CMakeLists.txt  CheckAbove.cpp  CometStacking.cpp  DeepSkyStacker.cpp  DeepSkyStacker.h  DeepSkyStacker.vcxproj  DeepSkyStacker.vcxproj.filters  DropFilesDlg.cpp  ExplorerBar.cpp  ImageProperties.cpp  ImageSinks.cpp  IntermediateFiles.cpp  LuminanceTab.cpp  OutputTab.cpp  PostCalibration.cpp  ProcessSettingsSheet.cpp  ProcessingDlg.cpp  ProcessingDlg.h  ProcessingSettings.cpp  ProcessingSettingsDlg.cpp  RGBTab.cpp  RawDDPSettings.cpp  RecommendedSettings.cpp  RegisterSettings.cpp  RenameGroup.cpp  ResultParameters.cpp  SaturationTab.cpp  SaveEditChanges.cpp  SavePicture.cpp  SavePicture.h  SettingsDlg.cpp  StackRecap.cpp  (+16 more)
dss/ui/: ProcessingDlg.ui  SavePicture.ui  StarMaskDlg.ui
dsscli/: CMakeLists.txt  DeepSkyStackerCL.cpp  DeepSkyStackerCL.h  progressconsole.cpp
dsslive/: CMakeLists.txt  ChartTab.cpp  ChartTab.h  DeepSkyStackerLive.cpp  EmailSettings.cpp  LiveSettings.cpp  RestartMonitoring.cpp  fileregistrar.cpp  filestacker.cpp  filestacker.h  foldermonitor.cpp  footprint.cpp  imageviewer.cpp  progresslive.cpp  settingstab.cpp
include/: dss_common.h  workarounds.h
libdelaunay/: CMakeLists.txt  Delaunay.cpp  Delaunay.h
libdsscompat/: dsscompat.h
libstackwalk/: CMakeLists.txt
libtools/: CMakeLists.txt  QElidedLabel.cpp  QElidedLabel.h  QLinearGradientCtrl.cpp  QLinearGradientCtrl.h  WndImage.cpp  cdxCRot90DC.cpp  imageview.cpp
libzclass/: CMakeLists.txt
libzclass/TestZPtr/: CMakeLists.txt
libzclass/TestZTrace/: CMakeLists.txt  TestZTrace.cpp
libzclass/source/: CMakeLists.txt  ZExcBase.cpp  ZTrace.cpp  zinttimr.cpp
matrix/: matrix.h
