cmake_minimum_required ( VERSION 3.10 )
project ( oaDSS VERSION 1.0.0 )

include ( FindPkgConfig )

if ( PKG_CONFIG_FOUND )
  pkg_search_module ( LIBTIFF4 libtiff-4 )
  pkg_search_module ( LIBRAW libraw )
  pkg_search_module ( LIBCFITSIO cfitsio )
  pkg_search_module ( LIBEXIV2 exiv2 )
else()
  message ( FATAL_ERROR "pkg-config not found" )
endif()

if ( NOT LIBTIFF4_FOUND )
	message ( FATAL_ERROR "libtiff required for build" )
endif()
if ( NOT LIBRAW_FOUND )
	message ( FATAL_ERROR "libraw required for build" )
endif()
if ( NOT LIBCFITSIO_FOUND )
	message ( FATAL_ERROR "libcfitsio required for build" )
endif()
if ( NOT LIBEXIV2_FOUND )
	message ( FATAL_ERROR "libexiv2 required for build" )
endif()

add_subdirectory ( libzclass )
add_subdirectory ( libtools )
add_subdirectory ( libdelaunay )
add_subdirectory ( core )
add_subdirectory ( dss )
add_subdirectory ( dsslive )
add_subdirectory ( dsscli )
